added styling and text corrections to about, hero and contact sections

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Professional Portfolio</title>
-
 </head>
 
 <body>
@@ -36,24 +35,22 @@
   </header>
 
   <!-- HERO -->
-  <section class="">
-    <div class="hero box columns">
-      <div class="intro column is-8">
-        <h2>Eli Pagan <br>
+  <section class="container box">
+    <div class="hero box is-mobile">
+      <div class="tile  has-text-black">
+        <h2 class="is-size-2 has-text-weight-bold mr-6 pr-6">Eli Pagan <br>
            Full Stack Web developer
         </h2>
-      </div>
-      <div class="live column">
-        <img src="./assets/images/ell-img.jpg" alt="Eli Pagan" />
+        <img class="image ml-6 pl-6" src="./assets/images/ell-img.jpg" alt="Eli Pagan" />
       </div>
     </div>
   </section>
 
   <!-- About Section -->
-  <section id="About" class="is-mobile">
+  <section id="About" class="is-mobile has-text-black">
       <p class="about has-text-centered">About</p>
     <div class="box">
-      <p class="is-size-3">I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, JAVASCRIPT and MORE!
+      <p class="box is-size-3 has-text-black">I am a full stack web developer who is skilled at Html, Css, Git, React, JavaScript, Mysql, Express, Node, Mvc and more!
         I chose to study and learn web development because it is both challenging and rewarding as a career and personal
         goal. <br> I am looking forward to working with a company that will challenge and teach me every step of the way
         so that
@@ -63,7 +60,7 @@
 
   <!-- PORTFOLIO SECTION -->
   <section class="section is-mobile">
-   <div id="Projects" class="project has-text-centered">
+   <div id="Projects" class="project has-text-centered has-text-black">
       <p>Projects</p>
     </div>
 </section>
@@ -73,7 +70,7 @@
     <!-- columns 1 -->
     <div class="columns">
         <div class="column is-6 is-offset-one-quarter">
-          <a class="box has-text-centered" style="color: black;" href="https://adamdagi.github.io/project-01/">
+          <a class="box has-text-centered has-text-black" href="https://adamdagi.github.io/project-01/">
             <p class="is-size-3 has-text-weight-bold">The Sprint Group Bar Finder</p>
             <hr>
             <p class="is-size-5">HTML/CSS/JAVASCRIPT/
@@ -82,10 +79,11 @@
           </a>
         </div>
       </div>
+
       <!-- Group Project 2 The Hype -->
       <div class="columns">
      <div class="column is-6 is-offset-one-quarter">
-          <a class="box has-text-centered" style="color: black;" href="https://immense-springs-30161.herokuapp.com/">
+          <a class="box has-text-centered has-text-black" href="https://immense-springs-30161.herokuapp.com/">
             <p class="is-size-3 has-text-weight-bold">The HYPE</p> <hr>
             <p class="is-size-5">HTML/CSS/JAVASCRIPT/BULMA/EXPRESS <br>
               MYSQL/MVC/SEQUELIZE/NODE/HANDLEBARS</p>
@@ -93,11 +91,12 @@
           </a>
         </div>
   </div>
+
      <!-- individual projects -->
      <!-- columns 2 -->
      <div class="columns">
       <div class="column is-4">
-        <a class="box has-text-centered" href="https://elip2389.github.io/horiseonMedia-challenge1/">
+        <a class="box has-text-centered has-text-black" href="https://elip2389.github.io/horiseonMedia-challenge1/">
         <p class="is-size-4 has-text-weight-bold">Horison Media Project</p> <br> <hr>
         <p class="is-size-5">HTML/CSS/RESPONSIVE DESIGN</p>
         <img src="./assets/images/horison-img.png" alt="Horison Media">
@@ -105,25 +104,26 @@
       </div>
 
       <div class="column is-4">
-        <a class="box has-text-centered" href="https://elip2389.github.io/PROFESSIONALLYprofessionalPORTFOLIO/">
-        <p class="is-size-4 has-text-weight-bold">Portfolio Project </p><br> <hr>
+        <a class="box has-text-centered has-text-black" href="https://elip2389.github.io/PROFESSIONALLYprofessionalPORTFOLIO/">
+        <p class="is-size-4 has-text-weight-bold ">Portfolio Project </p><br> <hr>
         <p class="is-size-5">HTML/CSS/RESPONSIVE DESIGN</p>
          <img src="./assets/images/port-img.png" alt="Portfolio Site">
         </a>
       </div>
 
       <div class="column is-4">
-        <a class="box has-text-centered" href="https://elip2389.github.io/password-generator-chall03/">
+        <a class="box has-text-centered has-text-black" href="https://elip2389.github.io/password-generator-chall03/">
         <p class="is-size-4 has-text-weight-bold">Password Generator</p><br> <hr>
         <p class="is-size-5">JAVASCRIPT</p>
         <img src="./assets/images/passgen-img.png" alt="Password Generator">
         </a>
       </div>
 </div>
+
 <!-- column 3 -->
 <div class="columns">
       <div class="column is-4">
-        <a class="box has-text-centered" href="https://elip2389.github.io/CodingQuiz-chall04/">
+        <a class="box has-text-centered has-text-black" href="https://elip2389.github.io/CodingQuiz-chall04/">
         <p class="is-size-4 has-text-weight-bold"> Coding Quiz<br> <hr>
         <p class="is-size-5">HTML/CSS/JAVASCRIPT</p>
           <img src="./assets/images/quiz-img.png" alt="Coding Quiz">
@@ -131,7 +131,7 @@
       </div>
 
       <div class="column ">
-  <a class="box has-text-centered" href="https://elip2389.github.io/Work-Day-Scheduler-chall05/">
+  <a class="box has-text-centered has-text-black" href="https://elip2389.github.io/Work-Day-Scheduler-chall05/">
                 <p class="is-size-4 has-text-weight-bold">Work Day Scheduler</p><br><hr>
         <p class="is-size-5">HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS</p>
         <img src="./assets/images/workday-img.png" alt="Work Day Scheduler">
@@ -139,7 +139,7 @@
       </div>
 
       <div class="column">
-        <a class="box has-text-centered" href="https://elip2389.github.io/weather-dashboard-chall06/">
+        <a class="box has-text-centered has-text-black" href="https://elip2389.github.io/weather-dashboard-chall06/">
         <p class="is-size-4 has-text-weight-bold">Weather DashBoard</p><br><hr>
         <p class="is-size-5">HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS/BOOTSTRAP</p>
         <img src="./assets/images/weather-img.png" alt="Weather DashBoard">
@@ -150,16 +150,16 @@
   </section>
 
   <!-- CONTACT SECTION -->
-  <section id="Contact" class="contact">
-    <div class="tact">
-      <h3>Contact</h3>
+  <section id="Contact" class="container is-mobile">
+    <div class="contact has-text-centered has-text-black">
+      <p >Contact</p>
     </div>
-    <div>
-      <address>
-        43 Bronx River RD <br>
-        Yonkers, New York <br>
-        10461 <br>
-        Phone: 347-445-9749 <br>
+     <div class="box has-text-centered ">
+      <address class="has-text-black box is-size-3">
+        21301 San Simeon Way <br>
+        North Miami, FL <br>
+        33179 <br>
+        Phone: <a href="tel:347-445-9749">347-445-9749</a> <br>
         Email: <a href="mailto:Mbk8689@gmail.com">Mbk8689@gmail.com</a> <br>
       </address>
     </div>
