--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   </header>
 
   <!-- HERO -->
-  <section class="container box">
-    <div class="hero box is-mobile">
+  <section class="container box is-mobile">
+    <div class="hero box">
       <div class="tile  has-text-black">
         <h2 class="is-size-2 has-text-weight-bold mr-6 pr-6">Eli Pagan <br>
-           Full Stack Web developer
+          Full Stack Web developer
         </h2>
         <img class="image ml-6 pl-6" src="./assets/images/ell-img.jpg" alt="Eli Pagan" />
       </div>
@@ -48,9 +48,10 @@
 
   <!-- About Section -->
   <section id="About" class="is-mobile has-text-black">
-      <p class="about has-text-centered">About</p>
+    <p class="about has-text-centered">About</p>
     <div class="box">
-      <p class="box is-size-3 has-text-black">I am a full stack web developer who is skilled at Html, Css, Git, React, JavaScript, Mysql, Express, Node, Mvc and more!
+      <p class="box is-size-3 has-text-black">I am a full stack web developer who is skilled at Html, Css, Git, React,
+        JavaScript, Mysql, Express, Node, Mvc and more!
         I chose to study and learn web development because it is both challenging and rewarding as a career and personal
         goal. <br> I am looking forward to working with a company that will challenge and teach me every step of the way
         so that
@@ -60,107 +61,116 @@
 
   <!-- PORTFOLIO SECTION -->
   <section class="section is-mobile">
-   <div id="Projects" class="project has-text-centered has-text-black">
+    <div id="Projects" class="project has-text-centered has-text-black">
       <p>Projects</p>
     </div>
-</section>
+  </section>
 
-    <section class="is-mobile">
+  <section class="is-mobile">
     <!-- Groupe Project 01 Bar Finder -->
     <!-- columns 1 -->
     <div class="columns">
-        <div class="column is-6 is-offset-one-quarter">
-          <a class="box has-text-centered has-text-black" href="https://adamdagi.github.io/project-01/">
-            <p class="is-size-3 has-text-weight-bold">The Sprint Group Bar Finder</p>
-            <hr>
-            <p class="is-size-5">HTML/CSS/JAVASCRIPT/
-              <br>BOOTSTRAP/JQUERY/API</p>
-            <img src="./assets/images/portfolio2-img.png" alt="Project 01">
-          </a>
-        </div>
+      <div class="column is-6 is-offset-one-quarter">
+        <a class="box has-text-centered has-text-black" href="https://adamdagi.github.io/project-01/">
+          <p class="is-size-3 has-text-weight-bold">The Sprint Group Bar Finder</p>
+          <hr>
+          <p class="is-size-5">HTML/CSS/JAVASCRIPT/
+            <br>BOOTSTRAP/JQUERY/API
+          </p>
+          <img src="./assets/images/portfolio2-img.png" alt="Project 01">
+        </a>
       </div>
+    </div>
 
-      <!-- Group Project 2 The Hype -->
-      <div class="columns">
-     <div class="column is-6 is-offset-one-quarter">
-          <a class="box has-text-centered has-text-black" href="https://immense-springs-30161.herokuapp.com/">
-            <p class="is-size-3 has-text-weight-bold">The HYPE</p> <hr>
-            <p class="is-size-5">HTML/CSS/JAVASCRIPT/BULMA/EXPRESS <br>
-              MYSQL/MVC/SEQUELIZE/NODE/HANDLEBARS</p>
-            <img src="./assets/images/proj02-img.png" alt="Project 02">
-          </a>
-        </div>
-  </div>
+    <!-- Group Project 2 The Hype -->
+    <div class="columns">
+      <div class="column is-6 is-offset-one-quarter">
+        <a class="box has-text-centered has-text-black" href="https://immense-springs-30161.herokuapp.com/">
+          <p class="is-size-3 has-text-weight-bold">The HYPE</p>
+          <hr>
+          <p class="is-size-5">HTML/CSS/JAVASCRIPT/<br>BULMA/EXPRESS 
+            MYSQL/<br>MVC/SEQUELIZE/NODE/<br>HANDLEBARS</p>
+          <img src="./assets/images/proj02-img.png" alt="Project 02">
+        </a>
+      </div>
+    </div>
 
-     <!-- individual projects -->
-     <!-- columns 2 -->
-     <div class="columns">
+    <!-- individual projects -->
+    <!-- columns 2 -->
+    <div class="columns">
       <div class="column is-4">
         <a class="box has-text-centered has-text-black" href="https://elip2389.github.io/horiseonMedia-challenge1/">
-        <p class="is-size-4 has-text-weight-bold">Horison Media Project</p> <br> <hr>
-        <p class="is-size-5">HTML/CSS/RESPONSIVE DESIGN</p>
-        <img src="./assets/images/horison-img.png" alt="Horison Media">
+          <p class="is-size-4 has-text-weight-bold">Horison Media Project</p> <br>
+          <hr>
+          <p class="is-size-5">HTML/CSS/RESPONSIVE DESIGN</p>
+          <img src="./assets/images/horison-img.png" alt="Horison Media">
         </a>
       </div>
 
       <div class="column is-4">
-        <a class="box has-text-centered has-text-black" href="https://elip2389.github.io/PROFESSIONALLYprofessionalPORTFOLIO/">
-        <p class="is-size-4 has-text-weight-bold ">Portfolio Project </p><br> <hr>
-        <p class="is-size-5">HTML/CSS/RESPONSIVE DESIGN</p>
-         <img src="./assets/images/port-img.png" alt="Portfolio Site">
+        <a class="box has-text-centered has-text-black"
+          href="https://elip2389.github.io/PROFESSIONALLYprofessionalPORTFOLIO/">
+          <p class="is-size-4 has-text-weight-bold ">Portfolio Project </p><br>
+          <hr>
+          <p class="is-size-5">HTML/CSS/RESPONSIVE DESIGN</p>
+          <img src="./assets/images/port-img.png" alt="Portfolio Site">
         </a>
       </div>
 
       <div class="column is-4">
         <a class="box has-text-centered has-text-black" href="https://elip2389.github.io/password-generator-chall03/">
-        <p class="is-size-4 has-text-weight-bold">Password Generator</p><br> <hr>
-        <p class="is-size-5">JAVASCRIPT</p>
-        <img src="./assets/images/passgen-img.png" alt="Password Generator">
+          <p class="is-size-4 has-text-weight-bold">Password Generator</p><br>
+          <hr>
+          <p class="is-size-5">JAVASCRIPT</p>
+          <img src="./assets/images/passgen-img.png" alt="Password Generator">
         </a>
       </div>
-</div>
+    </div>
 
-<!-- column 3 -->
-<div class="columns">
+    <!-- column 3 -->
+    <div class="columns">
       <div class="column is-4">
         <a class="box has-text-centered has-text-black" href="https://elip2389.github.io/CodingQuiz-chall04/">
-        <p class="is-size-4 has-text-weight-bold"> Coding Quiz<br> <hr>
-        <p class="is-size-5">HTML/CSS/JAVASCRIPT</p>
-          <img src="./assets/images/quiz-img.png" alt="Coding Quiz">
+          <p class="is-size-4 has-text-weight-bold"> Coding Quiz<br>
+            <hr>
+            <p class="is-size-5">HTML/CSS/JAVASCRIPT</p>
+            <img src="./assets/images/quiz-img.png" alt="Coding Quiz">
         </a>
       </div>
 
       <div class="column ">
-  <a class="box has-text-centered has-text-black" href="https://elip2389.github.io/Work-Day-Scheduler-chall05/">
-                <p class="is-size-4 has-text-weight-bold">Work Day Scheduler</p><br><hr>
-        <p class="is-size-5">HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS</p>
-        <img src="./assets/images/workday-img.png" alt="Work Day Scheduler">
+        <a class="box has-text-centered has-text-black" href="https://elip2389.github.io/Work-Day-Scheduler-chall05/">
+          <p class="is-size-4 has-text-weight-bold">Work Day Scheduler</p><br>
+          <hr>
+          <p class="is-size-5">HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS</p>
+          <img src="./assets/images/workday-img.png" alt="Work Day Scheduler">
         </a>
       </div>
 
       <div class="column">
         <a class="box has-text-centered has-text-black" href="https://elip2389.github.io/weather-dashboard-chall06/">
-        <p class="is-size-4 has-text-weight-bold">Weather DashBoard</p><br><hr>
-        <p class="is-size-5">HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS/BOOTSTRAP</p>
-        <img src="./assets/images/weather-img.png" alt="Weather DashBoard">
+          <p class="is-size-4 has-text-weight-bold">Weather DashBoard</p><br>
+          <hr>
+          <p class="is-size-5">HTML/CSS/<br>JAVASCRIPT/JQUERY/<br>MOMENT.JS/BOOTSTRAP</p>
+          <img src="./assets/images/weather-img.png" alt="Weather DashBoard">
         </a>
       </div>
-  
-</div>
+
+    </div>
   </section>
 
   <!-- CONTACT SECTION -->
   <section id="Contact" class="container is-mobile">
     <div class="contact has-text-centered has-text-black">
-      <p >Contact</p>
+      <p>Contact</p>
     </div>
-     <div class="box has-text-centered ">
+    <div class="box has-text-centered ">
       <address class="has-text-black box is-size-3">
         21301 San Simeon Way <br>
         North Miami, FL <br>
         33179 <br>
         Phone: <a href="tel:347-445-9749">347-445-9749</a> <br>
-        Email: <a href="mailto:Mbk8689@gmail.com">Mbk8689@gmail.com</a> <br>
+        Email: <a href="mailto:Mbk8689@gmail.com">Mbk8689@gmail.com</a>
       </address>
     </div>
   </section>
